--- a/launcher_config.json
+++ b/launcher_config.json
@@ -23,7 +23,7 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 			"name": "bin"
 		}
 	],
-	"clientFolder": "Tibia",
+	"clientFolder": "bin",
 	"newClientUrl" : "https://github.com/LeoTKBR/launcherconfig/releases/download/1.0.0/cliente.zip",
 	"clientExecutable": "client.exe"
 }
