--- a/launcher_config.json
+++ b/launcher_config.json
@@ -9,9 +9,9 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 • executable The path to the client's executable file, represented as "bin/client.exe"
 */
 {
-	"clientVersion": "1.2.0",
+	"clientVersion": "1.0.0",
 	"launcherVersion": "1.0",
-	"replaceFolders": true,
+	"replaceFolders": false,
 	"replaceFolderName": [
 		{
 			"name": "assets"
@@ -24,6 +24,6 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 		}
 	],
 	"clientFolder": "bin",
-	"newClientUrl" : "https://github.com/LeoTKBR/launcherconfig/releases/download/1.2.0/cliente.zip",
+	"newClientUrl" : "https://github.com/LeoTKBR/launcherconfig/releases/download/1.0.0/cliente.zip",
 	"clientExecutable": "client.exe"
 }
